--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,6 +59,4 @@ jobs:
           
 
       - name: Deploy static site to S3 bucket
-        run: |
-          ls ./
-          aws s3 sync ./docs/dist s3://vuepress --delete
+        run: aws s3 sync ./docs/.vuepress/dist s3://vuepress --delete
