--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,32 +31,25 @@ jobs:
       - name: Build docs
         run: npm run docs:build
       
-      - name: Configure AWS
+      - name: Install and configure s3cmd
         run: |
-          mkdir -p ~/.aws
-          touch ~/.aws/config
-          
-          echo "[plugins]
-          endpoint = awscli_plugin_endpoint
-
-          [default]
-          region = fr-par
-          s3 =
-            endpoint_url = https://s3.fr-par.scw.cloud
-            signature_version = s3v4
-            max_concurrent_requests = 100
-            max_queue_size = 1000
-            multipart_threshold = 50MB
-            # Edit the multipart_chunksize value according to the file sizes that you want to upload. The present configuration allows to upload files up to 10 GB (100 requests * 10MB). For example setting it to 5GB allows you to upload files up to 5TB.
-            multipart_chunksize = 10MB
-          s3api =
-            endpoint_url = https://s3.fr-par.scw.cloud" > ~/.aws/config
-          touch ~/.aws/credentials
-
+          sudo apt-get install -y s3cmd
+          touch ~/.s3cfg
           echo "[default]
-          aws_access_key_id = ${{ secrets.SCALEWAY_ACCESS_KEY_ID }}
-          aws_secret_access_key = ${{ secrets.SCALEWAY_SECRET_KEY_ID }}" > ~/.aws/credentials 
+          # Object Storage Region NL-AMS
+          host_base = s3.fr-par.scw.cloud
+          host_bucket = %(bucket)s.s3.fr-par.scw.cloud
+          bucket_location = fr-par
+          use_https = True
+
+          # Bucket Website feature configuration (https://www.scaleway.com/en/docs/s3-bucket-website-console/)
+          website_endpoint = https://%(bucket)s.s3-website.%(location)s.scw.cloud/
+          website_index = index.html # Website index filename
+          website_error = 404.html # Website error filename
+          # Login credentials
+          access_key = ${{ secrets.SCALEWAY_ACCESS_KEY_ID }}
+          secret_key = ${{ secrets.SCALEWAY_SECRET_ACCESS_KEY }}" > ~/.s3cfg
           
 
       - name: Deploy static site to S3 bucket
-        run: s3cmd
+        run: s3cmd sync ./docs/.vuepress/dist  s3://vuepress
